# crawler_project

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml
crawling/: README.md  crawl_script.sh  file.txt  sitemap_to_links.sh
crawling/helpers/: get_sitmaps.py
datatrove_extraction/: README.md  process.py
datatrove_extraction/helpers/: C4QualityFilter_ours.py  FineWebFilter_ours.py  GopherQualityFilter_ours.py  load_maft_langid.py
datatrove_extraction/helpers/extra_helpers/: load_tokenizer.py  read_jsonl.py  read_warc.py  validateInputs.py
datatrove_extraction/helpers/filters/: ArabicNormalizationFilter.py  C4QualityFilter_ours.py  FineWebFilter_ours.py  GopherQualityFilter_ours.py
log/: executor.json
log/stats/: 00000.json
