[project]
name = "crawler-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datatrove[all]>=0.7.0",
    "fasttext>=0.9.3",
    "trafilatura>=1.11.0",
    "transformers>=4.57.6",
    "warcio>=1.7.5",
    "wget>=3.2",
]
